Fix horizontal scroll in header bottom

--- a/less/style.less
+++ b/less/style.less
@@ -996,12 +996,13 @@ Version: 1.0
       display: flex;
       justify-content: flex-end;
       align-items: center;
+      padding-right: 0;
     }
     
     .header-top__social { 
       list-style: none;
       display: flex;
-      margin: 0 -1rem 0 1.4rem;
+      margin: 0 0 0 1.4rem;
       padding: 0;
       a {
         display: block;
